<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.voiceme.app.voiceme.AutocompleteDemoFragment">

    <com.oscarsalguero.smartystreetsautocomplete.SmartyStreetsAutocompleteTextView
        android:id="@+id/autocomplete_text_view_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionHint="@string/hint_completion"
        android:completionThreshold="1"
        android:hint="@string/hint_address"
        android:imeOptions="actionDone"
        android:inputType="textPostalAddress|textCapWords"
        android:maxLength="@integer/max_length_autocomplete"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        app:ssacv_adapterClass="in.voiceme.app.voiceme.adapter.AddressAutocompleteAdapter"
        app:ssacv_referer="@string/ss_ref"
        app:ssacv_suggestions="@integer/ss_suggestions"
        app:ssacv_webApiKey="@string/ss_web_key" />

    <TextView
        android:id="@+id/text_view_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/label_selection_none"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/selection_text_size" />

</LinearLayout>